﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$


2006-07-06 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php, libraries/db_details_common.inc.php
      libraries/db_details_db_info.inc.php:
      bug #1518147, after displaying information_schema, displaying other
      dbs does not show size
    * libraries/auth/config.auth.lib.php: bug #1477402, if default server fails
      you cannot switch in config auth

2006-07-06 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/select_server.lib.php, css/phpmyadmin.css.php:
      make serverlist a real html-list
    * main.php: move server selection above server
      details (more logical)

2006-07-04 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php, tbl_properties_operations.php,
      libraries/Table.class.php, libraries/export/sql.php,
      tbl_move_copy.php:
      a single-table copy did not copy the constraints;
      also bug #1388048, constraints copied too early when copying a db

2006-07-04 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * js\querywindow.js, libraries\footer.inc.php: renamed JavaScript function
      refreshLeft() to refreshNavigation()
    * libraries/Config.class.php: reload default configuration if config.inc.php
      is removed

2006-07-03 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * index.php, js\querywindow.js, querywindow.php, libraries\common.lib.php,
      libraries\footer.inc.php, libraries\sql_query_form.lib.php:
      bug #1477576 with rtl langs, navi links open in wrong frame

2006-07-02 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php: undefined $table when copying a db

2006-06-30 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: escape also single quotes
    ### 2.8.2 released from QA_2_8

2006-06-28 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php: remove debug code